--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col">
       <input class="form-control" [(ngModel)]="inputTarea" name="inputTarea" placeholder="Ingrese su tarea aquí" #valorInput/>
-      <button class="btn btn-primary w-100 mt-2" (click)="agregar(valorInput.value);limpiar();">Agregar</button>
+      <button class="btn btn-primary w-100 mt-2" (click)="agregar(valorInput.value);">Agregar</button>
     </div>
     <div class="col">
       <ul *ngFor="let tarea of api.todoList">
