--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<h1 class="text-center">{{title}}</h1>
+<h1 class="text-center mb-5">{{title}}</h1>
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 ">
+    <div class="col mb-2">
       <input class="form-control" [(ngModel)]="inputTarea" name="inputTarea" placeholder="Ingrese su tarea aquí" #valorInput/>
       <button class="btn btn-primary w-100 mt-2" (click)="agregar(valorInput.value);">Agregar</button>
     </div>
-    <div class="col">
+    <div class="col col-tareas">
+      <h2 class="mb-2">Mis tareas</h2>
       <ul *ngFor="let tarea of api.todoList">
         <li class="mb-2">
           {{tarea.name}} 
